# virtmcu

./: .dockerignore  .geminiignore  .gitignore  .shellcheckrc  AGENTS.md  BUILD_DEPS  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP_PHASE_12.md  VERSIONS  book.toml  check_qmp.py  deny.toml  docker-bake-latest.hcl  docker-bake-release.hcl  docker-bake.hcl  fix_mypy.py  hello.drcov  inspect_mcp.py  pathlib_refactor.py  pyproject.toml  requirements.txt  stress_loop.sh  test_cargo.sh  test_flatcc.sh  test_rust_compile.sh  test_zenoh_rust.rs  update_phase7_tests.py
docs/tutorials/lesson2-dynamic-plugins/src/: dummy.c  meson.build
hw/: gen_trigger.sh  meson.build
hw/dummy/: dummy.c
hw/misc/: educational-dummy.c  mmio-socket-bridge.c  telemetry.fbs  virtmcu-rust-ffi.c  virtmcu-rust-ffi.h  virtmcu_proto.h
hw/remote-port/: remote-port-bridge.c  remote-port-proto.c  remote-port-proto.h
hw/rust/: Cargo.toml  README.md  audit.toml  build.sh  rustfmt.toml
hw/rust/backbone/clock/: Cargo.toml
hw/rust/backbone/clock/src/: lib.rs
hw/rust/backbone/mmio-socket-bridge/: Cargo.toml
hw/rust/backbone/mmio-socket-bridge/src/: lib.rs
hw/rust/backbone/remote-port/: Cargo.toml
hw/rust/backbone/remote-port/src/: lib.rs
hw/rust/backbone/transport-unix/: Cargo.toml
hw/rust/backbone/transport-unix/src/: lib.rs
hw/rust/backbone/transport-zenoh/: Cargo.toml
hw/rust/backbone/transport-zenoh/src/: lib.rs  publisher.rs
hw/rust/common/rust-dummy/: Cargo.toml  README.md
hw/rust/common/rust-dummy/src/: lib.rs
hw/rust/common/test-qom-device/: Cargo.toml
hw/rust/common/test-qom-device/src/: lib.rs
hw/rust/common/virtmcu-api/: Cargo.toml  llvm-cov.toml
hw/rust/common/virtmcu-api/src/: can_generated.rs  core.fbs  core_generated.rs  flexray.fbs  flexray_generated.rs  lib.rs  lin.fbs  rf_generated.rs  wifi.fbs  wifi_generated.rs
hw/rust/common/virtmcu-api/tests/: firmware_studio_mock.rs  fuzz_network.rs  stress_telemetry.rs  test_wifi_header.rs
hw/rust/common/virtmcu-qom/: Cargo.toml  build.rs  wrapper.h
hw/rust/common/virtmcu-qom/src/: chardev.rs  cosim.rs  cpu.rs  error.rs  ffi.c  ffi.h  icount.rs  irq.rs  lib.rs  memory.rs  net.rs  qdev.rs  qom.rs  ssi.rs  sync.rs  sysemu.rs  telemetry.rs  timer.rs
hw/rust/common/virtmcu-qom/tests/: layout_validation.rs  type_registration.rs
hw/rust/common/virtmcu-test-devices/: Cargo.toml  trigger.c
hw/rust/common/virtmcu-test-devices/src/: lib.rs
hw/rust/comms/canfd/: Cargo.toml
hw/rust/comms/canfd/src/: lib.rs
hw/rust/comms/chardev/: Cargo.toml
hw/rust/comms/chardev/src/: lib.rs
hw/rust/comms/flexray/: Cargo.toml
hw/rust/comms/flexray/src/: lib.rs
hw/rust/comms/ieee802154/: Cargo.toml
hw/rust/comms/ieee802154/src/: lib.rs
hw/rust/comms/netdev/: Cargo.toml
hw/rust/comms/netdev/src/: lib.rs
hw/rust/comms/spi/: Cargo.toml
hw/rust/comms/spi/src/: lib.rs
hw/rust/comms/wifi/: Cargo.toml
hw/rust/mcu/s32k144-lpuart/: Cargo.toml
hw/rust/mmio-socket-bridge/: Cargo.toml
hw/rust/mmio-socket-bridge/src/: lib.rs
hw/rust/observability/actuator/: Cargo.toml
hw/rust/observability/telemetry/: Cargo.toml
hw/rust/observability/ui/: Cargo.toml
hw/rust/remote-port/src/: lib.rs
hw/rust/rust-dummy/: Cargo.toml  README.md  rust-dummy.c
hw/rust/rust-dummy/src/: lib.rs
hw/rust/s32k144-lpuart/: Cargo.toml
hw/rust/s32k144-lpuart/src/: lib.rs
hw/rust/test-qom-device/: Cargo.toml  trigger.c
hw/rust/test-qom-device/src/: lib.rs
hw/rust/virtmcu-api/: Cargo.toml
hw/rust/virtmcu-api/src/: can.fbs  can_generated.rs  lib.rs  lin_generated.rs  rf_generated.rs  telemetry_generated.rs
hw/rust/virtmcu-api/tests/: firmware_studio_mock.rs  fuzz_network.rs  stress_telemetry.rs
hw/rust/virtmcu-qom/: Cargo.toml  build.rs  wrapper.h
hw/rust/virtmcu-qom/src/: chardev.rs  cpu.rs  error.rs  ffi.c  ffi.h  icount.rs  irq.rs  lib.rs  memory.rs  net.rs  proto.rs  qdev.rs  qom.rs  ssi.rs  sync.rs  sysemu.rs  timer.rs
hw/rust/virtmcu-qom/tests/: bindgen_lint_stress_test.rs  layout_validation.rs  type_registration.rs
hw/rust/virtmcu-test-devices/: Cargo.toml
hw/rust/virtmcu-test-devices/src/: lib.rs
hw/rust/virtmcu-wifi/: Cargo.toml
hw/rust/virtmcu-wifi/src/: lib.rs
hw/rust/virtmcu-zenoh/: Cargo.toml
hw/rust/virtmcu-zenoh/src/: lib.rs
hw/rust/zenoh-802154/: Cargo.toml
hw/rust/zenoh-802154/src/: lib.rs
hw/rust/zenoh-actuator/: Cargo.toml
hw/rust/zenoh-actuator/src/: lib.rs
hw/rust/zenoh-canfd/: Cargo.toml
hw/rust/zenoh-canfd/src/: lib.rs
hw/rust/zenoh-chardev/: Cargo.toml
hw/rust/zenoh-chardev/src/: lib.rs
hw/rust/zenoh-clock/: Cargo.toml
hw/rust/zenoh-clock/src/: lib.rs
hw/rust/zenoh-flexray/: Cargo.toml
hw/rust/zenoh-flexray/src/: lib.rs
hw/rust/zenoh-netdev/: Cargo.toml
hw/rust/zenoh-netdev/src/: lib.rs
hw/rust/zenoh-spi/: Cargo.toml
hw/rust/zenoh-spi/src/: lib.rs
hw/rust/zenoh-telemetry/: Cargo.toml
hw/rust/zenoh-telemetry/src/: lib.rs
hw/rust/zenoh-ui/: Cargo.toml
hw/rust/zenoh-ui/src/: lib.rs
hw/zenoh/: meson.build  zenoh-802154.c  zenoh-actuator.c  zenoh-chardev.c  zenoh-clock.c  zenoh-netdev.c  zenoh-telemetry.c  zenoh-ui.c
packaging/virtmcu-tools/: README.md  pyproject.toml
packaging/virtmcu-tools/src/virtmcu_tools/: qmp_bridge.py  utils.py  yaml2qemu.py
tools/cyber_bridge/: CMakeLists.txt  Cargo.toml
tools/cyber_bridge/include/virtmcu/: sal_aal.hpp
tools/cyber_bridge/src/: lib.rs  resd_parser.rs
tools/deterministic_coordinator/: Cargo.toml
tools/deterministic_coordinator/protocol/: topics.toml
tools/deterministic_coordinator/src/: barrier.rs  lib.rs  main.rs  message_log.rs  topics.rs  topology.rs
tools/deterministic_coordinator/tests/: stress_barrier.rs  test_generated_schema.rs  test_ordering.rs  test_schema_corner_cases.rs
tools/systemc_adapter/: CMakeLists.txt  main.cpp  remote_port_adapter.cpp
tools/zenoh_coordinator/: Cargo.toml
tools/zenoh_coordinator/src/: barrier.rs  lib.rs  main.rs  topology.rs  topology_test.rs
tools/zenoh_coordinator/tests/: barrier_race_stress.rs  stress_barrier.rs
(+742 files in other folders)
