[workspace]
members = [
    "hw/rust/rust-dummy",
    "hw/rust/virtmcu-zenoh",
    "hw/rust/virtmcu-api",
    "hw/rust/zenoh-clock",
    "hw/rust/virtmcu-qom",
    "hw/rust/zenoh-netdev",
    "hw/rust/zenoh-chardev",
    "hw/rust/zenoh-telemetry",
    "hw/rust/zenoh-actuator",
    "hw/rust/zenoh-802154",
    "hw/rust/zenoh-ui",
    "hw/rust/zenoh-flexray",
    "hw/rust/test-qom-device", "tools/cyber_bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
publish = false
license = "Apache-2.0"

[workspace.dependencies]
zenoh = "1.9.0"
libc = "0.2"
flatbuffers = "25.12.19"
crossbeam-channel = "0.5"
byteorder = "1.5"
virtmcu-api = { path = "hw/rust/virtmcu-api" }
virtmcu-qom = { path = "hw/rust/virtmcu-qom" }
virtmcu-zenoh = { path = "hw/rust/virtmcu-zenoh" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
clone_on_ref_ptr = "deny"
pedantic = "warn"
