[workspace]
members = [
    "hw/rust/common/rust-dummy",
    "hw/rust/backbone/transport-zenoh",
    "hw/rust/backbone/transport-unix",
    "hw/rust/common/virtmcu-api",
    "hw/rust/backbone/clock",
    "hw/rust/common/virtmcu-qom",
    "hw/rust/comms/netdev",
    "hw/rust/comms/chardev",
    "hw/rust/observability/telemetry",
    "hw/rust/observability/actuator",
    "hw/rust/comms/ieee802154",
    "hw/rust/observability/ui",
    "hw/rust/comms/flexray",
    "hw/rust/common/test-qom-device",
    "hw/rust/common/virtmcu-test-devices",
    "hw/rust/backbone/mmio-socket-bridge",
    "hw/rust/backbone/remote-port",
    "hw/rust/comms/canfd",
    "hw/rust/mcu/s32k144-lpuart",
    "hw/rust/comms/wifi",
    "hw/rust/comms/spi",
    "tools/cyber_bridge",
    "tools/zenoh_coordinator",
    "tools/deterministic_coordinator", "tools/stress_adapter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]
publish = false
license = "Apache-2.0"

[workspace.dependencies]
zenoh = "1.9.0"
libc = "0.2"
flatbuffers = "25.12.19"
crossbeam-channel = "0.5"
byteorder = "1.5"
virtmcu-api = { path = "hw/rust/common/virtmcu-api" }
virtmcu-qom = { path = "hw/rust/common/virtmcu-qom" }
transport-zenoh = { path = "hw/rust/backbone/transport-zenoh" }
transport-unix = { path = "hw/rust/backbone/transport-unix" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow" # We need unsafe for QOM/FFI

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
str_to_string = "deny"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "allow"
missing_safety_doc = "allow"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "allow"
expect_used = "allow"
panic = "deny"
clone_on_ref_ptr = "deny"
# Specific pedantic lints to allow (too noisy or not applicable)
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow" # Common in FFI
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
doc_markdown = "allow" # Generated code has bad markdown
unreadable_literal = "allow" # Magic numbers often look like this
pub_underscore_fields = "allow" # Generated code uses this
used_underscore_binding = "allow" # Generated code uses this
borrow_as_ptr = "allow" # Common in FFI
cast_ptr_alignment = "allow" # QEMU object casting
cast_possible_wrap = "allow" # Common in timers and math
needless_pass_by_value = "allow" # Callbacks often need value semantic
single_match_else = "allow" # Sometimes clearer
bool_to_int_with_if = "allow"
manual_let_else = "allow"
cast_lossless = "allow"
ignored_unit_patterns = "allow"
