[project]
name = "virtmcu"
version = "0.1.0"
description = "Deterministic multi-node firmware simulation framework built on QEMU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qemu.qmp==0.0.3",
    "robotframework==7.0.0",
    "lark==1.1.9",
    "eclipse-zenoh==1.9.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pyyaml==6.0.1",
    "mcp==1.0.0",
    "ruff==0.3.4",
    "flatbuffers>=25",
]

[tool.ruff]
line-length = 120
exclude = [
    "third_party/",
    ".venv/",
    "**/__pycache__/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-too-long — acceptable in a C/embedded project with long strings
]

[dependency-groups]
dev = [
    "pyelftools>=0.32",
]
