[project]
name = "virtmcu"
version = "0.1.0"
description = "Deterministic multi-node firmware simulation framework built on QEMU"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qemu.qmp==0.0.5",
    "eclipse-zenoh==1.9.0",
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.5.0",
    "pytest-timeout==2.4.0",
    "pytest-cov==4.1.0",
    "pyelftools==0.30",
    "flatbuffers==25.12.19",
    "fdt==0.3.0",
    "hypothesis==6.152.1",
    "anyio==4.13.0",
    "pyyaml==6.0.1",
    "lark==1.1.9",
    "robotframework==7.0.0",
    "mcp==1.0.0",
    "typing-inspection==0.4.0",
    "psutil",
    "watchdog",
    "mypy",
    "ruff==0.15.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "tools/lin_fbs",
    "tools/telemetry_fbs",
    "tools/flexray_fbs",
    "tools",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "skip_asan: marks tests that are too timing sensitive to run under ASan"
]

[tool.ruff]
exclude = ["tools/virtmcu/core", "tools/lin_fbs", "tools/telemetry_fbs", "tools/flexray_fbs", "tests/fixtures/guest_apps/coordinator_stress/virtmcu"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "ANN",    # flake8-annotations
    "PT",     # flake8-pytest-style
    "BLE",    # flake8-blind-except
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",   # line-too-long
    "S101",   # assert
    "S603",   # subprocess untrusted input
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.chdir".msg = "Global state mutation is banned. Use pathlib and pass explicit `cwd=` to subprocesses."
"sys.path.insert".msg = "Path bootstrapping is banned. Rely on pyproject.toml and PYTHONPATH."
"sys.path.append".msg = "Path bootstrapping is banned. Rely on pyproject.toml and PYTHONPATH."

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
check_untyped_defs = true
show_error_codes = true
exclude = '(?x)( tools/virtmcu/core/ | tools/lin_fbs/ | tools/telemetry_fbs/ | tools/flexray_fbs/ | tests/fixtures/guest_apps/coordinator_stress/virtmcu/ | build/ | tools/systemc_adapter/build/ | \.venv/ | third_party/ )'
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "lark.*",
    "fdt.*",
    "flatbuffers.*",
    "mcp.*",
    "psutil.*",
    "elftools.*",
    "gdb.*",
    "Virtmcu.*",
    "virtmcu.*",
    "mmio_client.*",
    "conftest",
    "zenoh.*",
    "pytest.*",
    "pytest_asyncio.*",
    "robot.*",
    "pkg_resources.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "httpx.*",
    "mcp.*",
]
follow_imports = "skip"
