[workspace]
members = [
    "rust-dummy",
    "zenoh-clock",
    "virtmcu-qom", "zenoh-netdev", "zenoh-chardev", "zenoh-telemetry", "zenoh-actuator", "zenoh-802154", "zenoh-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
