[workspace]
members = [
    "rust-dummy",
    "virtmcu-zenoh",
    "zenoh-clock",
    "virtmcu-qom",
    "virtmcu-api",
    "zenoh-netdev",
    "zenoh-chardev",
    "zenoh-telemetry",
    "zenoh-actuator",
    "zenoh-802154",
    "zenoh-ui",
    "zenoh-flexray",
    "test-qom-device",
    "virtmcu-test-devices",
    "mmio-socket-bridge",
    "zenoh-canfd",
    "s32k144-lpuart", "virtmcu-wifi", "zenoh-spi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["virtmcu developers"]

[workspace.dependencies]
zenoh = "1.9.0"
libc = "0.2"
flatbuffers = "25.12.19"
crossbeam-channel = "0.5"
byteorder = "1.5"
virtmcu-qom = { path = "virtmcu-qom" }
virtmcu-zenoh = { path = "virtmcu-zenoh" }
virtmcu-api = { path = "virtmcu-api" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.lints.rust]
unsafe_code = "allow" # We need unsafe for QOM/FFI

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
clone_on_ref_ptr = "deny"
# Specific pedantic lints to allow (too noisy or not applicable)
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow" # Common in FFI
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
doc_markdown = "allow" # Generated code has bad markdown
unreadable_literal = "allow" # Magic numbers often look like this
pub_underscore_fields = "allow" # Generated code uses this
used_underscore_binding = "allow" # Generated code uses this
borrow_as_ptr = "allow" # Common in FFI
cast_ptr_alignment = "allow" # QEMU object casting
cast_possible_wrap = "allow" # Common in timers and math
needless_pass_by_value = "allow" # Callbacks often need value semantic
single_match_else = "allow" # Sometimes clearer
bool_to_int_with_if = "allow"
manual_let_else = "allow"
cast_lossless = "allow"
ignored_unit_patterns = "allow"

