[package]
name = "deterministic_coordinator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "deterministic_coordinator"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
zenoh = "1.9.0"
tokio = { version = "1.37.0", features = ["full", "macros"] }
clap = { version = "=4.4.18", features = ["derive"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3.1"
virtmcu-api = { path = "../../hw/rust/common/virtmcu-api" }
flatbuffers = "25.12.19"
typify = "0.6.2"
schemars = "0.8.21"
regress = "0.11.1"

[dev-dependencies]
tempfile = "3.27.0"

[package.metadata.cargo-machete]
ignored = ["rand", "rand_chacha", "schemars", "typify"]

[lints.clippy]
str_to_string = "allow"
